<resources>
    <string name="app_name">FitnessApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="add">add</string>
    <string name="title">title</string>
    <string name="select_exercises_for_your_plan">select exercises for your plan</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="gender">Gender</string>
    <string name="bmi">BMI</string>
    <string name="user_information">user information</string>
    <string name="name">name</string>
    <string name="save_changes">save changes</string>
    <string name="replay">Replay</string>
    <string name="back_to_main_page">back to main page</string>
    <string name="log_in">log in</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="startexercise">StartExercise</string>
    <string name="exercise_list">Exercise list</string>
    <string name="to_calculate_your_bmi">to calculate your BMI:</string>
    <string name="weight">weight</string>
    <string name="height">height</string>
    <string name="skip"><![CDATA[skip >]]></string>
    <string name="add_workout_plan">add workout plan</string>
    <string-array name="gender">
        <item>Female</item>
        <item>Male</item>
    </string-array>
</resources>