<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
<variable
    name="vm_additional"
    type="com.tuwaiq.fitnessapp.VM_profile" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lightgray"
        tools:context=".ui.AdditionalInfo">
        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="344dp"
            android:layout_height="253dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/main3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_additional"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="268dp"
            android:padding="20dp"
            android:text="@string/to_calculate_your_bmi"
            android:textSize="18dp"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout4"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="@+id/linearLayout4"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="288dp"
            android:layout_height="251dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="116dp"
            android:background="@drawable/rounded_offwhite_rectangle"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/weight_Signup"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/weight"
                app:shapeAppearance="@style/Cut"
                tools:ignore="SpeakableTextPresentCheck">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:text="@={vm_additional.weight}" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/height_Signup"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/height"
                app:shapeAppearance="@style/Cut"
                tools:ignore="SpeakableTextPresentCheck">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:text="@={vm_additional.height}" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/btn_skip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/skip" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_addAditional"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/buttons_orange"
                android:text="@string/add" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>