<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm_signUp"
            type="com.tuwaiq.fitnessapp.VM_Auth" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rootLayout_Signup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lightgray"
        tools:context=".ui.SignUp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="344dp"
            android:layout_height="253dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/main3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_SignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView2"
            app:layout_constraintVertical_bias="0.333" />

        <LinearLayout
            android:layout_width="306dp"
            android:layout_height="362dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_SignUp"
            android:background="@drawable/rounded_offwhite_rectangle"
            app:layout_constraintVertical_bias="0.153">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_Signup"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                app:shapeAppearance="@style/Cut"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:text="@={vm_signUp.name}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Email_Signup"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/email"
                app:shapeAppearance="@style/Cut"
                tools:ignore="SpeakableTextPresentCheck">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:text="@={vm_signUp.email}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_Signup"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/password"

                app:endIconMode="password_toggle"
                app:shapeAppearance="@style/Cut"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:text="@={vm_signUp.password}" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/gender"
                app:shapeAppearance="@style/Cut">

                <AutoCompleteTextView
                    android:id="@+id/gender_AutoTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="none"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@={vm_signUp.gender}"
                    tools:ignore="TouchTargetSizeCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_Signup"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/buttons_orange"
                android:text="@string/sign_up" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>