<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm_profile"
            type="com.tuwaiq.fitnessapp.VM_profile" />
        <variable
            name="user"
            type="com.tuwaiq.fitnessapp.data.User" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.UserProfile">

        <LinearLayout
            android:id="@+id/userInfo"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@drawable/top_section_info"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/profilepic"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/woman" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:text="@{user.name}" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/bmi"
                    android:text="@{``+user.bmi}" />

            </LinearLayout>


            <ImageView
                android:id="@+id/btn_logout"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="170dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/signout" />
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/infoCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userInfo">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_userInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:padding="10dp"
                    android:text="@string/user_information"
                    android:textSize="20dp"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.025" />

                <LinearLayout
                    android:id="@+id/hidden_userInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_userInfo">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/name"
                        app:shapeAppearance="@style/Rounded"
                        tools:ignore="TouchTargetSizeCheck">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/profile_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:visibility="gone"
                            android:inputType="textPersonName"
                            android:text="@={user.name}" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:hint="@string/weight"
                            app:shapeAppearance="@style/Rounded"

                            tools:ignore="TouchTargetSizeCheck">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/profile_weight"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:visibility="gone"

                                android:inputType="number"
                                android:text="@={``+user.weight}" />

                        </com.google.android.material.textfield.TextInputLayout>


                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:hint="@string/height"
                            app:shapeAppearance="@style/Rounded"
                            tools:ignore="TouchTargetSizeCheck">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/profile_height"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:visibility="gone"
                                android:inputType="number"
                                android:text="@={``+user.height}" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>


                </LinearLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/profile_saveChanges"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save_changes"
                    android:background="@drawable/rounded_offwhite_rectangle"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.939"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/hidden_userInfo" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/infoCard">

            <androidx.cardview.widget.CardView
                android:id="@+id/Changelanguage"
                android:layout_width="77dp"
                android:layout_height="70dp"
                android:layout_margin="20dp">

                <ImageView
                    android:id="@+id/langwageImage"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:src="@drawable/icons8_english_to_arabic" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/changeMode"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="20dp">

                <ImageView
                    android:id="@+id/modeImage"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:src="@drawable/icon_sun" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/SetAlarms"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="20dp">

                <ImageView
                    android:id="@+id/selectDate"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:src="@drawable/icons8_calendar" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>